PRMT-2018 Fix highlighted text colour issue when using high contrast on Microsoft browsers

--- a/src/components/common/FormComponents/Autosuggest/index.scss
+++ b/src/components/common/FormComponents/Autosuggest/index.scss
@@ -79,10 +79,12 @@
   color: $color_nhsuk-white;
 }
 
-.text-match--highlighted {
-  background-color: transparent;
-  font-weight: normal;
-  color: inherit;
+@media (forced-colors: none) {
+  .text-match--highlighted {
+    background-color: transparent;
+    font-weight: normal;
+    color: inherit;
+  }
 }
 
 .react-autosuggest__section-title {
